# benchmarks

agoo/: README.md  fly.rb
c11/: README.md  server  server.c
civetweb18/: README.md
clojure18/: CHANGELOG.md  README.md  project.clj
crystal018/: README.md  server  server.cr
dart118/: README.md  server.dart
django110/: README.md
django110/myenv/: pip-selfcheck.json
django110/mysite/: db.sqlite3
elixir132/: README.md  elixir132  mix.exs
express414/: README.md  app.js  package.json
facil057/src/: main.c
facil058/: README.md  makefile
go17/: README.md  server.go
grape017/: Gemfile  README.md  my_rack_app.rb  twitter.rb
hanami08/: .env.development  .env.production  .env.test  .gitignore  .hanamirc  Gemfile  README.md
haskell8/: Main.hs  README.md  server.cabal
hyper09/: Cargo.toml  README.md
iris4/: README.md  iris4.go
java8/: HttpServer.java  README.md
meteor14/: README.md  package.json
nodejs631/: README.md  server.js
padrino012/: .components  .ruby-gemset  Gemfile  README.md
phoenix12/: README.md  mix.exs
php7/: README.md
python352/: README.md  server.py
rack2/: README.md  my_rack_app.rb
rails5/: Gemfile  README.md
ruby231/: README.md  server.rb
rust110/: README.md  server  server.rs
scala211/: README.md  server.scala
scalatra24/: README.md
sinatra147/: README.md  myapp.rb
spring14/: README.md  build.gradle
stream16/: .packages  README.md  pubspec.yaml
template_engines/: template_engine_shootout.rb
urweb20160621/: README.md  server.ur  server.urp
warp3/: ChangeLog.md  Main.hs  README.md  warp3.cabal
(+110 files in other folders)
